--- a/flask/templates/infopage.html
+++ b/flask/templates/infopage.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="{{url_for('static', filename='infopage_css/recommend_info.css')}}">
     <link rel="stylesheet" href="{{url_for('static', filename='infopage_css/menubar.css')}}">
     <link rel="stylesheet" href="{{url_for('static', filename='infopage_css/filter.css')}}">
+    <link rel="shortcut icon" href="{{url_for('static', filename='infopage_img/favicon.ico')}}" type="image/x-icon">
     <title>우주공감</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
