--- a/flask/templates/infopage.html
+++ b/flask/templates/infopage.html
@@ -337,7 +337,7 @@
             <div class="photo" id="firstCardImg"style="background-image: url(http://cdn.visitkorea.or.kr/img/call?cmd=VIEW&id=b30c4f25-1c3c-4bc6-a51c-9a61f297c124)"></div>
 
           </div>
-          <div class="description" style="height: 284px;">
+          <div class="description">
               <h1 id ="firstCardTitle" style=
                                             "overflow: hidden; 
                                             text-overflow: ellipsis; 
