유사숙소 글씨 크기 수정

--- a/flask/templates/infopage.html
+++ b/flask/templates/infopage.html
@@ -240,7 +240,7 @@
                         <div class="card" style="width: 280px; height: 390px;">
                           <img id="similar1-img" height="185.5" width="278" class="card-img-top"  src="{{ url_for('static', filename='infopage_img/1.jpg')}}"  alt="Card image cap">
                           <div class="card-body">
-                            <h5 id="similar1-name" class="card-title" style="text-align:center; font-weight:bold">유사숙소1</h5>
+                            <h5 id="similar1-name" class="card-title" style="text-align:center; font-weight:bold; font-size: 18px;">유사숙소1</h5>
                               <!-- <img src="https://raw.githubusercontent.com/Jihun0224/KTO/master/flask/static/infopage_img/star.png">-->
                             <div style="position: relative; top: 10px;">
                               <h class="card-text" style="font-size: 14px; font-weight:bold">주소: </h><h id="similar1-addr">none</h><br>
@@ -254,7 +254,7 @@
                         <div class="card" style="width: 280px; margin-left: 100px;height: 390px;">
                           <img id="similar2-img" height="185.5" width="278" class="card-img-top"  src="{{ url_for('static', filename='infopage_img/1.jpg')}}"  alt="Card image cap">
                           <div class="card-body">
-                            <h5 id="similar2-name" class="card-title" style="text-align:center; font-weight:bold">유사숙소2</h5>
+                            <h5 id="similar2-name" class="card-title" style="text-align:center; font-weight:bold; font-size: 18px;">유사숙소2</h5>
                               <!-- <img src="https://raw.githubusercontent.com/Jihun0224/KTO/master/flask/static/infopage_img/star.png">-->
                             <div style="position: relative; top: 10px;">
                               <h class="card-text" style="font-size: 14px; font-weight:bold">주소: </h><h id="similar2-addr">none</h><br>
