--- a/flask/templates/infopage.html
+++ b/flask/templates/infopage.html
@@ -1,11 +1,11 @@
+<!DOCTYPE html>
 {% with messages = get_flashed_messages() %}
     {% if messages %}
     <script>  
-        alert("모든 조건에 일치하는 결과가 없어\n일부 조건과 일치하는 숙소를 추천합니다.\n") 
+        alert("모든 조건에 일치하는 결과가 없어 일부 조건과 일치하는 숙소를 추천합니다.\n") 
     </script>
     {% endif %}
 {% endwith %}
-<!DOCTYPE html>
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -225,7 +225,7 @@
                   Data = Data.other.replaceAll('\'','\"')
                   Data = JSON.parse(Data)
                   
-                  url = "https://fluffyword.s3.ap-northeast-2.amazonaws.com/숙소별+리뷰+워드클라우드/"+Data.name.trimRight()+".jpg"
+                  url = "https://fluffyword.s3.ap-northeast-2.amazonaws.com/숙소별+리뷰+워드클라우드/"+Data.name.split('[')[0].trimRight()+".jpg"
                   $("#wordcloudSrc").attr("src", url);
                   
                   function sendError() {
@@ -320,7 +320,7 @@
             var Data = $('#my-data').data();
             Data = Data.other.replaceAll('\'','\"')
             Data = JSON.parse(Data)
-            get_score(Data.name)
+            get_score(Data.name.split('[')[0].trim())
          </script>
         </div>
 
