--- a/flask/templates/infopage.html
+++ b/flask/templates/infopage.html
@@ -242,10 +242,10 @@
                           <div class="card-body">
                             <h5 id="similar1-name" class="card-title" style="text-align:center; font-weight:bold; font-size: 18px;">유사숙소1</h5>
                               <!-- <img src="https://raw.githubusercontent.com/Jihun0224/KTO/master/flask/static/infopage_img/star.png">-->
-                            <div style="position: relative; top: 10px;">
+                            <div style="position: relative; top: 5px;">
                               <h class="card-text" style="font-size: 14px; font-weight:bold">주소: </h><h id="similar1-addr">none</h><br>
                               <h class="card-text" style="font-size: 14px; font-weight:bold">전화번호: </h><h id="similar1-num">none</h><br>
-                              <a id="similar1-url" href= "" class="card-text" style="font-size: 14px; font-weight:bold; position: relative; top: 10px;">상세보기</a>
+                              <a id="similar1-url" href= "" class="card-text" style="font-size: 14px; font-weight:bold;">상세보기</a>
                             </div>
 
                           </div>
@@ -259,7 +259,7 @@
                             <div style="position: relative; top: 10px;">
                               <h class="card-text" style="font-size: 14px; font-weight:bold">주소: </h><h id="similar2-addr">none</h><br>
                               <h class="card-text" style="font-size: 14px; font-weight:bold">전화번호: </h><h id="similar2-num">none</h><br>
-                              <a id="similar2-url" href= "" class="card-text" style="font-size: 14px; font-weight:bold; position: relative; top: 10px;">상세보기</a>
+                              <a id="similar2-url" href= "" class="card-text" style="font-size: 14px; font-weight:bold;">상세보기</a>
                             </div>
                           </div>
                         </div>
