url option target=_blank 추가

--- a/flask/templates/infopage.html
+++ b/flask/templates/infopage.html
@@ -246,7 +246,7 @@
                             <div style="position: relative; top: 5px;">
                               <h class="card-text" style="font-size: 14px; font-weight:bold">주소: </h><h id="similar1-addr">none</h><br>
                               <h class="card-text" style="font-size: 14px; font-weight:bold">전화번호: </h><h id="similar1-num">none</h><br>
-                              <a id="similar1-url" href= "" class="card-text" style="font-size: 14px; font-weight:bold;">상세보기</a>
+                              <a id="similar1-url" href= "" class="card-text" style="font-size: 14px; font-weight:bold;" target="_blank">상세보기</a>
                             </div>
 
                           </div>
@@ -260,7 +260,7 @@
                             <div style="position: relative; top: 10px;">
                               <h class="card-text" style="font-size: 14px; font-weight:bold">주소: </h><h id="similar2-addr">none</h><br>
                               <h class="card-text" style="font-size: 14px; font-weight:bold">전화번호: </h><h id="similar2-num">none</h><br>
-                              <a id="similar2-url" href= "" class="card-text" style="font-size: 14px; font-weight:bold;">상세보기</a>
+                              <a id="similar2-url" href= "" class="card-text" style="font-size: 14px; font-weight:bold;" target="_blank">상세보기</a>
                             </div>
                           </div>
                         </div>
@@ -362,7 +362,7 @@
               </p>
               </p>
                <p class="read-more">
-              <a id="firstCardUrl" href="https://korean.visitkorea.or.kr/detail/ms_detail.do?cotid=36f54304-e9a8-4615-9226-eb749bf6ce75&big_category=A01&mid_category=A0101&big_area=6">내용 더보기</a>
+              <a id="firstCardUrl" href="" target="_blank">내용 더보기</a>
             </p>
           </div>
         </div>
@@ -396,7 +396,7 @@
             </p>
 
             <p class="read-more">
-              <a id="SecondCardUrl"href="https://korean.visitkorea.or.kr/detail/ms_detail.do?cotid=98763dd6-119d-4e32-910e-a40652334bda&big_category=A01&mid_category=A0101&big_area=6">내용 더보기</a>
+              <a id="SecondCardUrl"href="" target="_blank">내용 더보기</a>
             </p>
           </div>
         </div>
@@ -430,7 +430,7 @@
         </p>
         </p>
          <p class="read-more">
-        <a id="thirdCardUrl" href="https://korean.visitkorea.or.kr/detail/ms_detail.do?cotid=36f54304-e9a8-4615-9226-eb749bf6ce75&big_category=A01&mid_category=A0101&big_area=6">내용 더보기</a>
+        <a id="thirdCardUrl" href="" target="_blank">내용 더보기</a>
       </p>
     </div>
   </div>
