--- a/flask/static/infopage_css/infopage.css
+++ b/flask/static/infopage_css/infopage.css
@@ -56,7 +56,7 @@ table {
 	/* grid-template-columns: 200px 1fr */
 	/* grid-template-columns: 100px 200px auto */
 
-	grid-template-rows: 100px 500px 300px 300px;
+	grid-template-rows: 100px 500px 300px 300px 300px;
 	/* grid-template-rows: repeat(3, 1fr) */
 	/* grid-template-rows: 200px 1fr */
 	/* grid-template-rows: 100px 200px auto */
@@ -65,6 +65,7 @@ table {
 		"main    main    mapinfo"
 		"main    main	compare"
 		"main    main   tourlist"
+		"review   review   review"
 }
 
 .header{
@@ -85,6 +86,14 @@ table {
 
 .tourlist{
 	grid-area: tourlist;
+}
+
+.review{
+	grid-area: review;
+}
+
+.footer{
+	grid-area: footer;
 }
 
 .RecommandedSite{
