--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -5,6 +5,7 @@
             <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
         <link rel="shortcut icon" href="{{url_for('static', filename='infopage_img/favicon.ico')}}" type="image/x-icon">
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -23,6 +24,13 @@
             crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
         <script src="{{url_for('static', filename='js/getUserParams.js')}}"></script>
+
+        <meta property="og:url" content="http://tour.bigleader.net/">
+        <meta property="og:title" content="우주공감">
+        <meta property="og:type" content="website">
+        <meta property="og:image" content="https://tour-bigleader.s3.ap-northeast-2.amazonaws.com/openGrapgh.png">
+        <meta property="og:description" content="자, 이제 주인공이 되어 떠나 볼까요?">
+
         <title>우주공감</title>
     </head>
     <body id="main__body">
