--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -73,9 +73,9 @@
 
         
         <div class="info" style="position: relative; top: -125px;">
-            <img src="{{ url_for('static', filename='main_img/bigleader.png')}}" style="position:relative; left: -100px;" width="150" height="60"><br>
-            <img src="{{ url_for('static', filename='main_img/KTO.png')}}" style="position:relative; top: -60px; left: 70px;" width="170" height="60"><br>
-
+            <img src="{{ url_for('static', filename='main_img/bigleader.png')}}" style="position:relative; left: -160px;" width="150" height="70"><br>
+            <img src="{{ url_for('static', filename='main_img/KTO.png')}}" style="position:relative; top: -65px; left: 20px;" width="170" height="70"><br>
+            <img src="{{ url_for('static', filename='main_img/국립공원공단.png')}}" style="position:relative; top: -150px; left: 190px;" width="170" height="90"><br>
             <img src="{{ url_for('static', filename='main_img/우주공감.png')}}" width="350" height="350"><br>
             <h style="font-weight:bold; color: #002545;">우주공감</h><h>은  한국관광품질인증제가 보장하는 관광시설을 바탕으로 만들어진 서비스입니다.<br>
                 여행자가 생각하는 가치 있는 여행을 중심으로 딱 맞는, 잊을 수 없는 경험을 선사해 드립니다.<br>
