--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -76,16 +76,16 @@
             <img src="{{ url_for('static', filename='main_img/bigleader.png')}}" style="position:relative; left: -160px;" width="150" height="70"><br>
             <img src="{{ url_for('static', filename='main_img/KTO.png')}}" style="position:relative; top: -65px; left: 20px;" width="170" height="70"><br>
             <img src="{{ url_for('static', filename='main_img/국립공원공단.png')}}" style="position:relative; top: -150px; left: 190px;" width="170" height="90"><br>
-            <img src="{{ url_for('static', filename='main_img/우주공감.png')}}" width="350" height="350"><br>
-            <h style="font-weight:bold; color: #002545;">우주공감</h><h>은  한국관광품질인증제가 보장하는 관광시설을 바탕으로 만들어진 서비스입니다.<br>
+            <img src="{{ url_for('static', filename='main_img/우주공감.png')}}" width="350" height="350" style="position:relative; top: -130px;"><br>
+            <h style="font-weight:bold; color: #002545; position:relative; top: -100px;">우주공감</h><h style="position:relative; top: -100px;">은  한국관광품질인증제가 보장하는 관광시설을 바탕으로 만들어진 서비스입니다.<br>
                 여행자가 생각하는 가치 있는 여행을 중심으로 딱 맞는, 잊을 수 없는 경험을 선사해 드립니다.<br>
                 우주공감이 그려나가는 세상 속에서</h>
-                <h style="font-weight:bold; color: #002545;">우리가 주인공이 되어 공감하는 여행</h><h>을 만들어 보세요.</h>
+                <h style="font-weight:bold; color: #002545; position:relative; top: -100px;">우리가 주인공이 되어 공감하는 여행</h><h style="position:relative; top: -100px;">을 만들어 보세요.</h>
         </div>
 
         
         <div class="input">
-            <h2 class="label" style="font-size: 22px; width:380px; position: relative; top: -40px;">자, 이제 주인공이 되어 떠나 볼까요?</h2>  
+            <h1 class="label" style="font-size: 30px; width:500px; position: relative; top: -100px;">자, 이제 주인공이 되어 떠나 볼까요?</h1>  
 
             <div class="input_group">
                 <!-- <h1 class=label>지역선택(도 단위, 예: 강원도)</h1> -->
