og 이미지 경로 변경

--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -28,7 +28,7 @@
         <meta property="og:url" content="http://tour.bigleader.net/">
         <meta property="og:title" content="우주공감">
         <meta property="og:type" content="website">
-        <meta property="og:image" content="https://tour-bigleader.s3.ap-northeast-2.amazonaws.com/openGrapgh.png">
+        <meta property="og:image" content="https://tour-bigleader.s3.ap-northeast-2.amazonaws.com/openGraph.png">
         <meta property="og:description" content="자, 이제 주인공이 되어 떠나 볼까요?">
 
         <title>우주공감</title>
